part1/Exercise_1.10/write/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stringgenerator
spec:
  type: ClusterIP
  selector:
    app: stringgenerator
  ports:
    - port: 567
      protocol: TCP
      targetPort: 3012
