part1/Exercise_1.10/write/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forall-ingress
spec:
  rules:
  - http:
      paths:
      - path: /random
        pathType: Prefix
        backend:
          service:
            name: stringgeneratorservice
            port:
              number: 567
